chore: initial fixes for default interval, pause when off screen, display only upper time, and allow manual refresh

--- a/src/dashboards/components/AutoRefresh.scss
+++ b/src/dashboards/components/AutoRefresh.scss
@@ -55,7 +55,7 @@
 
 .timerange-dropdown {
   justify-self: end;
-  width: 192px;
+  width: 178px;
 }
 
 .refresh-form-timerange-toggle {
